[package]
name = "lakesoul-io"
version = "0.0.0"
edition = "2021"

[dependencies]
datafusion = { git = "https://github.com/meta-soul/arrow-datafusion.git", branch = "datafusion-17-parquet-prefetch", features = ["simd"] }
object_store = { git = "https://github.com/meta-soul/arrow-rs.git", branch = "arrow-rs-31-parquet-bufferred", features = ["aws"] }

tokio-stream = "0.1.9"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["io", "compat"]}
derivative = "2.2.0"
atomic_refcell = "0.1.8"
arrow = { git = "https://github.com/meta-soul/arrow-rs.git", branch = "arrow-rs-31-parquet-bufferred", features = ["prettyprint", "simd"] }
arrow-schema = { git = "https://github.com/meta-soul/arrow-rs.git", branch = "arrow-rs-31-parquet-bufferred", features = ["serde"] }
arrow-array = { git = "https://github.com/meta-soul/arrow-rs.git", branch = "arrow-rs-31-parquet-bufferred", features = ["simd"] }
arrow-buffer = { git = "https://github.com/meta-soul/arrow-rs.git", branch = "arrow-rs-31-parquet-bufferred" }
parquet = { git = "https://github.com/meta-soul/arrow-rs.git", branch = "arrow-rs-31-parquet-bufferred", features = ["async", "arrow"] }
futures = "0.3"
datafusion-common = { git = "https://github.com/meta-soul/arrow-datafusion.git", branch = "datafusion-17-parquet-prefetch" }
serde = { version = "1.0", default-features = false, features = ["derive", "std"], optional = true }
url = "2.2"
async-trait = "0.1"
smallvec = "1.10"
dary_heap = "0.3"
hdrs = { version = "0.2", features = ["async_file"], optional = true }
bytes = "1.4.0"

[features]
hdfs = ["dep:hdrs"]

[dev-dependencies]
tempfile = "3.3.0"
comfy-table = "6.0"
whoami = "1.3"
rand = "0.8"
